2012-08-23  Don Porter  <dgp@users.sourceforge.net>

	* unix/tkUnixWm.c: [Bugs 3554026,3561016] Stop crash with tearoff menus.

2012-08-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/nmakehlp.c: Add "-V<num>" option, in order to be able
	to detect partial version numbers.

2012-08-03  Francois Vogel  <fvogelnew1@free.fr>

	* tests/bind.test:  [Bug 3554081]: Test bind-22.10 failed

2012-07-31  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixKey.c (TkpSetKeycodeAndState, TkpInitKeymapInfo)
	(TkpGetKeySym): [Bug 3551802]: Convert from XKeycodeToKeysym to
	XkbKeycodeToKeysym to fix deprecation warning.

2012-07-31  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/nmakehlp.c: Backport from Tcl 8.6, but add -Q option from
	sampleextension.

2012-07-19  Francois Vogel  <fvogelnew1@free.fr>

	* unix/tkUnixMenuBu.c: [Bug 3545457]: Crash on packing a menubutton

2012-07-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/makefile.vc: [Bug 3544932]: Visual studio compiler check fails

2012-07-08  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkIntXlibDecls.h: [Bug 3541305]: Xfree/Xsync...
	should not be macros

2012-07-05  Donal K. Fellows  <dkf@users.sf.net>

	* doc/wm.n (geometry): [Bug 3538401]: Better description of the key
	difference between [wm geometry] and [winfo geometry]; the former
	represents the window manager's understanding, not Tk's.

2012-07-04  Donal K. Fellows  <dkf@users.sf.net>

	* win/tkWinDialog.c (GetFileNameW): [Bug 3540127]: Clean up the tables
	of options for the file dialogs so that there's no longer any need to
	have mysterious increments.

2012-06-26  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/configure.in:  Link cygwin wish.exe with win32 tk.dll, only
	* unix/Makefile.in:   in combination with --enable-shared.
	* unix/tcl.m4:
	* unix/configure:     autoconf-2.13

2012-06-22  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/Makefile.in:    [Bug 1844430]: cygwin make fails in 8.4.14-8.5b3
	* unix/tcl.m4:        Sync with Tcl version.